<resources>
    <string name="app_name">Registration App</string>
    <string name="title">Registration Form</string>
    <string name="text1">Welcome to Adventure Learning Club!</string>
    <string name="fullName">Full Name</string>
    <string name="gender">Gender</string>
    <string name="studentID">Student ID</string>
    <string name="school">School</string>
    <string name="email">E-mail</string>
    <string name="phone">Phone</string>
    <string name="register">Register</string>
</resources>